k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo-list
  labels:
    app: todo-backend
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081
