k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-backend
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-backend
  template:
    metadata:
      labels:
        app: go-backend
    spec:
      containers:
        - name: go-backend
          image: laziesv/go-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-backend
  namespace: todo-app
spec:
  type: NodePort
  selector:
    app: go-backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32101
