k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-service
  namespace: todo-list
  labels:
    app: todo-list
spec:
  type: NodePort
  selector:
    app: todo-list
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
