k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: app.192.168.56.101.nip.io
    http:
      paths:

      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-backend
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-frontend
            port:
              number: 3000
